Update to /20 Netz

--- a/site.conf
+++ b/site.conf
@@ -2,14 +2,11 @@
   hostname_prefix = 'ffvp-',
   site_name = 'Freifunk Vorderpfalz',
   site_code = 'ffws',
-  prefix4 = '10.210.0.0/18',
-  prefix6 = 'fd00:ffba:ffba:0::/64',
+  prefix4 = '10.210.48.0/20',
+  prefix6 = '2a03:2260:300c:300::/64',
   timezone = 'CET-1CEST,M3.5.0,M10.5.0/3',
   ntp_servers = {'svc.services.ff-sw.net'},
-<<<<<<< HEAD
 
-=======
->>>>>>> origin/master
   regdom = 'US',
   wifi24 = {
     channel = 4,
@@ -34,8 +31,8 @@
     },
   },
   next_node = {
-    ip4 = '10.210.0.1',
-    ip6 = 'fd00:ffba:ffba:0::1',
+    ip4 = '10.210.48.1',
+    ip6 = '2a03:2260:300c:300::1',
     mac = '16:41:95:40:f7:dc',
   },
   fastd_mesh_vpn = {
